--- a/mysite/blog/static/css/blog.css
+++ b/mysite/blog/static/css/blog.css
@@ -30,3 +30,9 @@ h1, h2, h3, h4 {
 .post-form-blog .btn-primary {
     float: right;
 }
+.top-menu {
+    color: white;
+    float: right;
+    font-size: 26pt;
+    margin-right: 20px;
+}
