--- a/mysite/blog/templates/blog/base.html
+++ b/mysite/blog/templates/blog/base.html
@@ -12,6 +12,9 @@
 </head>
 <body>
 <div class="page-header">
+    {% if user.is_authenticated%}
+        <a href="{% url 'post_new' %}" class="top-menu"><i class="fas fa-plus fa-2x"></i></a>
+    {% endif %}
     <h1><a href="{% url 'post_list' %}">Rubin's Blog</a></h1>
 </div>
 <div class="content container">
