--- a/mysite/blog/templates/blog/post_detail.html
+++ b/mysite/blog/templates/blog/post_detail.html
@@ -7,7 +7,9 @@
         </div>
     {% endif %}
     <br>
+    {% if user.is_authenticated%}
     <a href="{% url 'post_edit' pk=post.pk %}"><i class="fas fa-edit fa-2x fa-spin" style="color: #ff922b;"></i></a>
+    {% endif %}
     <h1>{{ post.title }}</h1>
     <p>{{ post.text|linebreaksbr }}</p>
 </div>
