Add feature to make drafts and publish them.

--- a/mysite/blog/templates/blog/post_detail.html
+++ b/mysite/blog/templates/blog/post_detail.html
@@ -2,13 +2,18 @@
 {% block content %}
 <div class="post">
     {% if post.published_date %}
+    <!-- if the post has a publish date, then show the publish date -->
         <div class="date">
             {{ post.published_date }}
         </div>
+    {% else %}
+    <!-- else show the publish button to post the draft -->
+        <a href="{% url 'post_publish' pk=post.pk %}" class="btn btn-primary">Publish</a>
     {% endif %}
     <br>
     {% if user.is_authenticated%}
-    <a href="{% url 'post_edit' pk=post.pk %}"><i class="fas fa-edit fa-2x fa-spin" style="color: #ff922b;"></i></a>
+    <!-- only logged in users can view/edit their posts -->
+    <a href="{% url 'post_edit' pk=post.pk %}"><i class="fas fa-edit fa-2x" style="color: #ff922b;"></i></a>
     {% endif %}
     <h1>{{ post.title }}</h1>
     <p>{{ post.text|linebreaksbr }}</p>
