--- a/mysite/blog/templates/blog/base.html
+++ b/mysite/blog/templates/blog/base.html
@@ -13,7 +13,8 @@
 <body>
 <div class="page-header">
     {% if user.is_authenticated%}
-        <a href="{% url 'post_new' %}" class="top-menu"><i class="fas fa-plus fa-2x"></i></a>
+        <a href="{% url 'post_draft_list' %}" class="top-menu"><i class="fas fa-pen-nib"></i></a>
+        <a href="{% url 'post_new' %}" class="top-menu"><i class="fas fa-plus"></i></a>
     {% endif %}
     <h1><a href="{% url 'post_list' %}">Rubin's Blog</a></h1>
 </div>
