--- a/mysite/blog/templates/blog/post_draft_list.html
+++ b/mysite/blog/templates/blog/post_draft_list.html
@@ -3,12 +3,9 @@
 {% block content %}
     {% for post in posts %}
         <div class="post">
-            <div class="date">
-                <p>Published:{{ post.published_date }}</p>
-            </div>
+            <p class="date">created: {{ post.created_date|date:'d-m-Y' }}</p>
             <h1><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h1>
-            <p>{{ post.text|truncatechars:50|linebreaksbr }}</p>
+        <p>{{ post.text|truncatechars:50 }}</p>
         </div>    
     {% endfor %}
 {% endblock %}
-        
