--- a/mysite/blog/templates/blog/base.html
+++ b/mysite/blog/templates/blog/base.html
@@ -15,6 +15,9 @@
     {% if user.is_authenticated%}
         <a href="{% url 'post_draft_list' %}" class="top-menu"><i class="fas fa-pen-nib"></i></a>
         <a href="{% url 'post_new' %}" class="top-menu"><i class="fas fa-plus"></i></a>
+
+        <p class="top-menu">Hello, {{ user.username }} <small>(<a href="{% url 'logout' %}">Log out</a>)</small> </p>
+
     {% else %}
         <a href="{% url 'login' %}" class="top-menu"><i class="fas fa-sign-in-alt fa-2x"></i></a>
     {% endif %}
