--- a/mysite/blog/templates/blog/post_detail.html
+++ b/mysite/blog/templates/blog/post_detail.html
@@ -1,4 +1,5 @@
 {% extends 'blog/base.html' %}
+{% load markdownify %}
 {% block title %} {{ post.title }} {% endblock %}
 {% block content %}
 <div class="post">
@@ -17,7 +18,7 @@
     <a href="{% url 'post_edit' pk=post.pk %}"><i class="fas fa-edit fa-2x" style="color: #ff922b;"></i></a>
     {% endif %}
     <h1>{{ post.title }}</h1>
-    <p>{{ post.text|linebreaksbr }}</p>
+    <p>{{ post.text | markdown | safe }}</p>
 
     <hr>
     <a href="{% url 'add_comment_to_post' pk=post.pk %}" class="btn btn-secondary">Add Comment</a>
@@ -33,7 +34,7 @@
                 <a href="{% url 'comment_remove' pk=comment.pk %}"><i class="fas fa-trash-alt"></i></a>
             {% endif %}
             <strong>{{comment.author}}</strong> 
-            <p>{{comment.text}}</p>
+            <p>{{comment.text | markdown | safe | linebreaksbr }}</p>
         </div>
         {% endif %}
     {% empty %}
