--- a/mysite/blog/templates/blog/post_detail.html
+++ b/mysite/blog/templates/blog/post_detail.html
@@ -17,6 +17,10 @@
     <!-- only logged in users can view/edit their posts -->
     <a href="{% url 'post_edit' pk=post.pk %}"><i class="fas fa-edit fa-2x" style="color: #ff922b;"></i></a>
     {% endif %}
+    <a href="{% url 'post_delete' pk=post.pk %}" class="btn btn-danger"
+    onclick="return confirm('Are you sure you want to delete this post')">
+    <i class="fas fa-minus-circle"></i></a>
+
     <h1>{{ post.title }}</h1>
     <p>{{ post.text | markdown | safe }}</p>
 
