--- a/mysite/blog/templates/registration/login.html
+++ b/mysite/blog/templates/registration/login.html
@@ -8,4 +8,5 @@
             {{ form.as_p }}
     <button type="submit" class="btn btn-primary">Login</button>
     </form>
+    <p>Don't have an account? <a href="{% url 'signup' %}">Sign up here</a></p>
 {% endblock %}
