Added README file.

--- a/mysite/blog/templates/blog/base.html
+++ b/mysite/blog/templates/blog/base.html
@@ -23,7 +23,7 @@
     {% else %}
         <a href="{% url 'login' %}" class="top-menu"><i class="fas fa-sign-in-alt fa-2x"></i></a>
     {% endif %}
-    <h1><a href="{% url 'post_list' %}">Rubin's Blog</a></h1>
+    <h1><a href="{% url 'post_list' %}">Rubin's Programming Blog</a></h1>
 </div>
 <div class="content container">
     <div class="row">
